package io.silky;

public interface EncipherComponent {
    String encipherString(String code);
}
