@startuml

interface EncipherComponent {
    + encipherString(String code)
}

class EncipherConcreteComponent {
    code : string
    + encipherString(String code)
}

class EncipherDecorator {
    - component : EncipherComponent

    + EncipherDecorator(component : EncipherComponent)
    + encipherString(String code)
}

class EncipherFirstDecorator {
    - component : EncipherComponent

    + EncipherFirstDecorator(component : EncipherComponent)
    + encipherString(String code)
}

class EncipherSecondDecorator {
    - component : EncipherComponent

    + EncipherSecondDecorator(component : EncipherComponent)
    + encipherString(String code)
}

class EncipherThirdDecorator {
    - component : EncipherComponent

    + EncipherThirdDecorator(component : EncipherComponent)
    + encipherString(String code)
}

EncipherComponent <|.. EncipherConcreteComponent
EncipherComponent <|.. EncipherDecorator
EncipherDecorator <|-- EncipherFirstDecorator
EncipherDecorator <|-- EncipherSecondDecorator
EncipherDecorator <|-- EncipherThirdDecorator

@enduml